Overflow fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -670,7 +670,7 @@
         font-size:16px;
     }
 
-    html {
+    body {
         overflow-x:hidden;
     }
     
@@ -697,6 +697,7 @@
         width:100%;
         height:120px;
         border-bottom:1px solid white;
+        overflow:hidden;
     }
 
     .top-bar__logoWrapper
@@ -768,6 +769,7 @@
         min-width:160px;
         transform:translateX(300px);
         transition:all 0.5s ease-in-out;
+        overflow:hidden;
     }
 
     .top-bar__list--visible
